@@ -1,3 +1,8 @@
+2007-03-27  Carsten Clark  <tantumquantum@gmail.com>
+
+	* POTFILES.in: Added missing files.
+	Bug #421986
+
 2007-03-15  Marco Ciampa  <ciampix@libero.it>
 
 	* it.po: updated italian translation.
